# joint-motor-hal-c-v2

./: .gitignore  CMakeLists.txt  README.md  TEST_PLAN.md  build.sh  deploy.sh  scp.sh  tags
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  motor_example_dual  motor_example_dual_full  motor_example_fb_cb  motor_example_mit  motor_example_single
doc/: API_USAGE.md  exo_node_arch.md  exo_periph_design.md  exo_periph_design_v1.1.md  known_issues.md  test_guide.md
examples/: dual_motor.c  dual_motor_full.c  single_motor.c
exo_node/: CMakeLists.txt  build.sh  exo_shm.h  setup_rt_env.sh
exo_node/config/: exo_config.json  exo_config_single.json
exo_node/core/: exo_imu_sensor.cpp  exo_latency_trace.cpp  exo_latency_trace.h  exo_mock_sensor.cpp  exo_mock_sensor.h  exo_motor_ctrl.cpp  exo_motor_ctrl.h  exo_node_context.h  exo_rt_log.h  exo_rt_worker.cpp  exo_rt_worker.h  exo_state_machine.cpp  exo_state_machine.h
exo_node/doc/: ALGO_API.md
exo_node/imu/: imu_sensor.h
exo_node/imu_hal/: CMakeLists.txt
exo_node/imu_hal/demo/: emd-gaf.c
exo_node/imu_hal/example/: read_sensor.c
exo_node/imu_hal/inc/: emd_gaf.h
exo_node/imu_hal/src/: emd_gaf.c
exo_node/imu_hal/src/driver/Ict1531x/: Ict1531x.c  Ict1531x.h
exo_node/imu_hal/src/driver/icm45608/imu/: edmp_data_ram_b2s_map.h  edmp_prgm_ram_selftest.h  inv_imu.h  inv_imu_edmp.h  inv_imu_edmp_defs.h  inv_imu_edmp_memmap.h  inv_imu_edmp_mrm.c  inv_imu_edmp_mrm.h  inv_imu_edmp_patches_defs.h  inv_imu_edmp_wearable.c  inv_imu_edmp_wearable.h  inv_imu_selftest.c
exo_node/imu_hal/src/hal/: emd_hal.c  emd_hal.h
exo_node/interface/: Defines.hpp  IListener.hpp  IMsgInternalDispatcher.hpp
exo_node/log_helper/: x86_make_and_install.sh
exo_node/main_loop/: main_loop.cpp  main_loop.h
exo_node/motor/: motor_ctrl.cpp  motor_init.cpp  motor_rt_worker.cpp  motor_state.cpp  motor_state.h
exo_node/ros/: RosAdapter.cpp  RosAdapter.h
exo_node/shm/: shm_mgr.cpp  shm_mgr.h
exo_node/src/: CanDispatcher.cpp  CanDispatcher.h  Factory.cpp  Factory.h  RosAdapter.cpp  WebServer.cpp  exo_log.h  exo_rt_worker.cpp  exo_rt_worker.h  exo_shm.h  exo_shm_mgr.cpp  exo_shm_mgr.h  exo_state_machine.cpp  exo_state_machine.h  factory.cpp  imu_sensor.cpp  latency_trace.cpp  main.cpp  main_loop.cpp  motor_ctrl.cpp  motor_init.cpp  motor_init.h  motor_rt_worker.cpp  motor_rt_worker.h  motor_state.cpp  shm_mgr.cpp
exo_node/src/config/: exo_config.json
exo_node/src/imu/: imu_sensor.cpp
exo_node/src/main_loop/: main_loop.cpp
exo_node/src/motor/: motor_ctrl.cpp  motor_ctrl.h  motor_init.cpp  motor_init.h  motor_rt_worker.cpp  motor_rt_worker.h  motor_state.cpp  motor_state.h
exo_node/src/ros/: RosAdapter.cpp  RosAdapter.h
exo_node/src/test/: CMakeLists.txt  algo_sim.cpp  algo_sim_single.cpp  perf_test.cpp
exo_node/src/utils/: latency_trace.cpp  latency_trace.h  rt_log.h
exo_node/src/web/: WebServer.cpp  WebServer.h
exo_node/test/: CMakeLists.txt  algo_sim.cpp  algo_sim_single.cpp  perf_test.cpp
exo_node/utils/: factory.cpp
exo_node/web/: WebServer.cpp
imu_hal/: build.sh  toolchain.cmake
imu_hal/demo/: emd-gaf.c
imu_hal/example/: read_sensor.c
imu_hal/inc/: emd_gaf.h  emd_gaf_types.h
imu_hal/src/: emd_gaf.c  frontend.h  invn_mag.h  invn_mag_ict1531x.c
imu_hal/src/driver/Ict1531x/: Ict1531xSerif.h
imu_hal/src/driver/icm45608/imu/: edmp_data_ram_selftest_map.h  edmp_prgm_ram_patch_calmag.h  (+10 more)
imu_hal/src/hal/: emd_hal.c  emd_hal.h  system_interface.h
inc/: canopen_frames.h  motor_hal.h  motor_hal_types.h
motor_hal/: CMakeLists.txt
motor_hal/doc/: API_USAGE.md  MOTOR_TOOL_MANUAL.md  exo_node.md  exo_node_arch.md  known_issues.md  motor_hal_c_使用与排查指南.md  pdo.md  stark_periph_design_v1.1.md  test_guide.md
motor_hal/examples/: dual_motor_full.c  feedback_callback.c  mit_control.c  single_motor.c
motor_hal/inc/: canopen_frames.h  motor_hal.h  motor_hal_types.h  pdo_mapper.h
motor_hal/src/: can_driver.c  can_driver_internal.h  canopen_frames.c  feedback_parser.c  motor_calib.c  motor_calib.h  motor_hal.c  motor_hal_startup.c  nmt_master.c  pdo_mapper.h  sdo_client.c  sdo_client_internal.h
motor_hal/test/: hal_stress_test.c
motor_hal/tools/: CMakeLists.txt  TEST_COMMANDS.md  cmd_byte0.c  cmd_calib.c  cmd_control.c  cmd_help.c  cmd_pdo.c  cmd_pdo_ctrl.c  cmd_probe.c  cmd_report.c  cmd_sdo.c  cmd_sensor.c  cmd_system.c  cmd_watch.c  command_registry.c  command_registry.h  daemon.c  daemon.h  main.c  tool_hal.c  tool_hal.h
src/: can_driver.c  canopen_frames.c  heartbeat.c  motor_calib.c  motor_calib.h  motor_hal.c  motor_hal_startup.c  pdo_handler.c  pdo_mapper.c  sdo_client.c  sdo_client_internal.h  utils.c
stark_periph_node/: CMakeLists.txt  setup_rt_env.sh
stark_periph_node/src/: main.cpp  stark_client.h  stark_shm.h
stark_periph_node/src/config/: stark_config.json  stark_config_single.json
stark_periph_node/src/doc/: ALGO_API.md  API.md  算法控制接口文档.md
stark_periph_node/src/imu/: imu_sensor.cpp  imu_sensor.h
stark_periph_node/src/interface/: IListener.hpp
stark_periph_node/src/log_helper/: arm64_make_and_install.sh
stark_periph_node/src/main_loop/: main_loop.cpp  main_loop.h
stark_periph_node/src/motor/: motor_context.h  motor_ctrl.cpp  motor_ctrl.h  motor_init.cpp  motor_init.h  motor_rt_worker.cpp  motor_rt_worker.h  motor_state.cpp  motor_state.h
stark_periph_node/src/ros/: RosAdapter.cpp  RosAdapter.h
stark_periph_node/src/shm/: shm_mgr.cpp  shm_mgr.h
stark_periph_node/src/test/: CMakeLists.txt  algo_sim.cpp  algo_sim_single.cpp  demo_algo.c  perf_test.cpp  stark_tool.c  stress_overnight.c  stress_ringbuf.c
stark_periph_node/src/utils/: factory.cpp  latency_trace.cpp  latency_trace.h  rt_log.h
stark_periph_node/src/web/: WebServer.cpp  WebServer.h
stark_periph_node/tools/: stark_tool.c
test/: hal_stress_test.c
tools/: CMakeLists.txt  cmd_byte0.c  cmd_control.c  cmd_help.c  cmd_pdo.c  cmd_pdo_ctrl.c  cmd_read.c  cmd_report.c  cmd_rpdo.c  cmd_sensor.c  cmd_system.c  command_registry.c  command_registry.h  daemon.c  daemon.h  main.c  tool_hal.c  tool_hal.h
